--- a/style.css
+++ b/style.css
@@ -4,3 +4,20 @@ span{
     padding-left: 3px;
     padding-right: 3px;
 }
+
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+
+}
+
+header{
+  display: flex;
+  justify-content: center;   
+  border-bottom: 1px solid black;
+  width: 100vw;
+  margin: 10px;
+}
+
