--- a/style.css
+++ b/style.css
@@ -1,27 +1,41 @@
-span{
-    border: 1px solid black;
-    margin-left: 3px;
-    padding-left: 3px;
-    padding-right: 3px;
-}
-
 body{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
 
 }
 
 header{
-  display: flex;
-  justify-content: center;   
-  border-bottom: 1px solid black;
-  width: 100vw;
-  margin: 10px;
+display: flex;
+justify-content: center;   
+border-bottom: 1px solid black;
+width: 100vw;
+margin: 10px;
+}
+
+section{
+display: flex;
+flex-direction: column;
+justify-content: center;
+}
+ul{
+border: 1px solid red;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 0px;
 }
 
 li{
-  list-style-type: none;
+width: 100%;
+list-style-type: none;
+border: 1px solid red;
+
+}
+
+.checked{
+text-decoration: line-through;
 
 }
