--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
+span{
+  border: 1px solid black;
+}
+
 body{
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
 
+}
+section{
+display: flex;
+flex-direction: column;
+justify-content: center;
 }
 
 header{
@@ -12,12 +21,6 @@ justify-content: center;
 border-bottom: 1px solid black;
 width: 100vw;
 margin: 10px;
-}
-
-section{
-display: flex;
-flex-direction: column;
-justify-content: center;
 }
 ul{
 border: 1px solid red;
@@ -28,14 +31,35 @@ align-items: center;
 padding: 0px;
 }
 
+ul div{
+width: 100%;
+display: flex;
+border: 2px black solid;
+justify-content: space-between;
+}
+
 li{
 width: 100%;
-list-style-type: none;
+  list-style-type: none;
 border: 1px solid red;
-
+display: flex;
+justify-content: space-between;
+align-items: center;
+text-align: start;
 }
 
 .checked{
-text-decoration: line-through;
+text-decoration-line: line-through;
+color: black;
+}
 
+li button{
+ text-decoration: ;
+color: red;
+}
+
+
+.checkbox{
+width: 20px;
+height: 20px;
 }
