Adcionando estilos ao to-do

--- a/style.css
+++ b/style.css
@@ -1,34 +1,97 @@
-span{
-  border: 1px solid black;
-}
-
 body{
+  margin: 0px;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
+  width: 100vw;
 
 }
 section{
+width: 55vw;
+padding: 0px;
 display: flex;
+min-width: 200px;
 flex-direction: column;
 justify-content: center;
+background-color: rgb(30, 210, 177);
+border: 1px rgb(0, 0, 0) solid;
+border-top-right-radius: 15px;
+border-top-left-radius: 15px;
+border-bottom-right-radius: 15px;
+border-bottom-left-radius: 15px;
+padding-left: 3px;
+padding-right: 3px;
+}
+
+input{
+  border: 1px solid black;
+  border-bottom-left-radius: 15px;
+  border-top-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-top-right-radius: 15px;
+  padding-left: 5px;
+  margin-right: 2.5px;
+  width:100% ;
+}
+
+div>button{
+  border: 1px solid black;
+  background-color: rgb(210, 210, 210);
+  cursor: pointer;
+  border-bottom-left-radius: 15px;
+  border-top-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-top-right-radius: 15px;
+}
+  
+
+div>button:hover{
+  background-color: rgb(176, 174, 174);  
+
+}
+
+label{
+  font-size: 2.3rem;
+  width: 100%;
+  text-align: center;
+  background-color: white;
+  background-color: rgb(30, 210, 177);
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px; 
+  margin-bottom: 0.3;
+  color: black;  
+  transition: 1s;
+}
+
+label:hover{
+  letter-spacing: 1px;
+  font-size: 2.3rem;
+
+
+}
+
+section>div{
+  display: flex;
+  justify-content: center;
+
 }
 
 header{
 display: flex;
 justify-content: center;   
-border-bottom: 1px solid black;
-width: 100vw;
+border-bottom: 1px solid red;
+width: 100%;
 margin: 10px;
 }
+
 ul{
-border: 1px solid red;
 display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-padding: 0px;
+padding-right: 2px;
+padding-left: 2px;
+padding-bottom: 0px;
 }
 
 ul div{
@@ -36,16 +99,30 @@ width: 100%;
 display: flex;
 border: 2px black solid;
 justify-content: space-between;
+align-items: center;
+border-bottom-left-radius: 15px;
+border-top-left-radius: 15px;
+border-bottom-right-radius: 15px;
+border-top-right-radius: 15px;
+margin-bottom: 3px;
+margin-right: 10px;
+margin-left: 10px;
+background-color: rgb(250, 163, 163);
+}
+
+ul div:hover{
+  background-color: rgb(255, 122, 122);
+
 }
 
 li{
 width: 100%;
-  list-style-type: none;
-border: 1px solid red;
+height: fit-content;
+list-style-type: none;
 display: flex;
-justify-content: space-between;
+justify-content: flex-start;
 align-items: center;
-text-align: start;
+color:black;
 }
 
 .checked{
@@ -53,13 +130,46 @@ text-decoration-line: line-through;
 color: black;
 }
 
-li button{
- text-decoration: ;
-color: red;
+.checkbox {
+  width: 1.3em;
+  height: 1.3em;
+  background-color: white;
+  border-radius: 50%;
+  vertical-align: middle;
+  border: 2px solid rgb(0, 0, 0);
+  appearance: none;
+  -webkit-appearance: none;
+  outline: none;
+  cursor: pointer;
+  margin-right: 5px;
 }
 
-
-.checkbox{
-width: 20px;
-height: 20px;
+.checkbox:checked {
+  background-color: rgb(149, 255, 128);
+}
+.checkbox:hover{
+  
+  background-color: rgb(173, 251, 157);
+}
+ul button{
+  margin-left: 5px;
+  width: 1.3em;
+  height: 1.3em;
+  background-color: white;
+  border-radius: 50%;
+  vertical-align: middle;
+  border: 2px solid rgb(0, 0, 0);
+  appearance: none;
+  -webkit-appearance: none;
+  outline: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bolder;
+  text-align: center;
+  margin-right: 5px;
+}
+ul button:hover{
+    background-color: rgb(243, 252, 146);
 }
