--- a/style.css
+++ b/style.css
@@ -7,10 +7,12 @@ body{
 
 }
 section{
-width: 55vw;
+margin-top: 20px;
+width: 99vw;
 padding: 0px;
 display: flex;
 min-width: 200px;
+max-width: 500px;
 flex-direction: column;
 justify-content: center;
 background-color: rgb(30, 210, 177);
