--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ input{
   border-top-right-radius: 15px;
   padding-left: 5px;
   margin-right: 2.5px;
-  width:100% ;
+  height: 25px;
+  width:60% ;
 }
 
 div>button{
@@ -53,7 +54,7 @@ div>button:hover{
 }
 
 label{
-  font-size: 2.3rem;
+  font-size: 3.4rem;
   width: 100%;
   text-align: center;
   background-color: white;
@@ -63,11 +64,14 @@ label{
   margin-bottom: 0.3;
   color: black;  
   transition: 1s;
+  border-bottom: 2px solid black;
+  padding-top: 5px;
+  padding-bottom: 5px;;
+  margin-bottom: 15px;
 }
 
 label:hover{
   letter-spacing: 1px;
-  font-size: 2.3rem;
 
 
 }
