--- a/style.css
+++ b/style.css
@@ -1,50 +1,54 @@
+*:focus-visible{
+  outline: 0;
+}
+
 body{
   margin: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
+  background-color: rgb(252, 234, 190);
 
 }
-section{
-margin-top: 20px;
-width: 99vw;
-padding: 0px;
-display: flex;
-min-width: 200px;
-max-width: 500px;
-flex-direction: column;
-justify-content: center;
-background-color: rgb(30, 210, 177);
-border: 1px rgb(0, 0, 0) solid;
-border-top-right-radius: 15px;
-border-top-left-radius: 15px;
-border-bottom-right-radius: 15px;
-border-bottom-left-radius: 15px;
-padding-left: 3px;
-padding-right: 3px;
+form{
+  margin-top: 1px;
+  width: 99vw;
+  padding: 0px;
+  display: flex;
+  min-width: 200px;
+  max-width: 500px;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgb(30, 210, 177);
+  border: 1px rgb(0, 0, 0) solid;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 
 input{
   border: 1px solid black;
   border-bottom-left-radius: 15px;
   border-top-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  border-top-right-radius: 15px;
-  padding-left: 5px;
-  margin-right: 2.5px;
+  padding-left: 10px;
   height: 25px;
-  width:60% ;
+  width:60%;
+  height: 1.8rem;
+  font-size: 1.4rem;
 }
 
-div>button{
+/* button adicionar */
+#addTask{
   border: 1px solid black;
   background-color: rgb(210, 210, 210);
   cursor: pointer;
-  border-bottom-left-radius: 15px;
-  border-top-left-radius: 15px;
   border-bottom-right-radius: 15px;
   border-top-right-radius: 15px;
+  font-size: 1.4rem;
 }
   
 
@@ -72,48 +76,46 @@ label{
 
 label:hover{
   letter-spacing: 1px;
-
-
 }
 
-section>div{
+form>div{
   display: flex;
   justify-content: center;
 
 }
 
 header{
-display: flex;
-justify-content: center;   
-border-bottom: 1px solid red;
-width: 100%;
-margin: 10px;
+  display: flex;
+  justify-content: center;   
+  border-bottom: 1px solid red;
+  width: 100%;
+  margin: 10px;
 }
 
 ul{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding-right: 2px;
-padding-left: 2px;
-padding-bottom: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-right: 2px;
+  padding-left: 2px;
+  padding-bottom: 0px;
 }
 
 ul div{
-width: 100%;
-display: flex;
-border: 2px black solid;
-justify-content: space-between;
-align-items: center;
-border-bottom-left-radius: 15px;
-border-top-left-radius: 15px;
-border-bottom-right-radius: 15px;
-border-top-right-radius: 15px;
-margin-bottom: 3px;
-margin-right: 10px;
-margin-left: 10px;
-background-color: rgb(250, 163, 163);
+  width: 100%;
+  display: flex;
+  border: 2px black solid;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom-left-radius: 15px;
+  border-top-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-top-right-radius: 15px;
+  margin-bottom: 3px;
+  margin-right: 10px;
+  margin-left: 10px;
+  background-color: rgb(250, 163, 163);
 }
 
 ul div:hover{
@@ -122,23 +124,24 @@ ul div:hover{
 }
 
 li{
-width: 100%;
-height: fit-content;
-list-style-type: none;
-display: flex;
-justify-content: flex-start;
-align-items: center;
-color:black;
+  width: 100%;
+  height: 2rem;
+  list-style-type: none;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color:black;
+  font-size: 1.4rem;
 }
 
 .checked{
-text-decoration-line: line-through;
-color: black;
+  text-decoration-line: line-through;
+  color: black;
 }
 
 .checkbox {
-  width: 1.3em;
-  height: 1.3em;
+  width: 1.6rem;
+  height: 1.6rem;
   background-color: white;
   border-radius: 50%;
   vertical-align: middle;
@@ -159,8 +162,8 @@ color: black;
 }
 ul button{
   margin-left: 5px;
-  width: 1.3em;
-  height: 1.3em;
+  width: 1.7rem;
+  height: 1.6rem;
   background-color: white;
   border-radius: 50%;
   vertical-align: middle;
@@ -175,6 +178,7 @@ ul button{
   font-weight: bolder;
   text-align: center;
   margin-right: 5px;
+  /* background-image: url(imgs/trash.png); */
 }
 ul button:hover{
     background-color: rgb(243, 252, 146);
