--- a/style.css
+++ b/style.css
@@ -8,57 +8,61 @@ body{
   justify-content: center;
   align-items: center;
   width: 100vw;
-  background-color: rgb(245, 251, 252);
+  background-color: rgb(255, 255, 255);
 
 }
 form{
-  margin-top: 1px;
-  width: 99vw;
+  width: 90vw;
   padding: 0px;
   display: flex;
   min-width: 200px;
   max-width: 500px;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   background-color: rgba(30, 210, 177, 0);
   border: 1px rgba(0, 0, 0, 0) solid;
   padding-left: 3px;
   padding-right: 3px;
-}
+} 
 
-label{
-  font-size: 3.8rem;
-  width: 100%;
+h1{
+  line-height: 2rem;
+  font-size: 4rem;
+  width: 65%;
   text-align: center;
   background-color: rgba(30, 210, 177, 0);
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px; 
-  margin-bottom: 0.3;
   color: black;  
   transition: 1s;
   border-bottom: 1px solid rgba(0, 0, 0, 0.207);
-  padding-top: 5px;
+  padding-top: 0px;
   padding-bottom: 5px;;
-  margin-bottom: 19px;
+  margin-bottom: 35px;
   
 }
 
-label:hover{
-  letter-spacing: 1px;
+div{  
+  width: 95vw;
+  max-width: 500px;
+  min-width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 input{
-  border: 1px solid black;
-  background-color: rgba(232, 231, 231, 0.097);
+  border: 1px solid rgba(0, 0, 0, 0);
+  background-color: rgba(210, 246, 247, 0.097);
   color: black;
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  border-bottom-left-radius: 15px;
+  border-top-right-radius: 18px;
+  border-top-left-radius: 18px;
+  border-bottom-right-radius: 18px;
+  border-bottom-left-radius: 18px;
   padding-left: 10px;
   height: 25px;
-  width: 70%;
-  height: 1.8rem;
+  width: 75%;
+  height: 2.1rem;
   font-size: 1.4rem;
   margin-right: 5px;
   box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.638);
@@ -69,8 +73,8 @@ input{
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 3px solid rgb(76, 130, 124);
-  color: rgb(104, 144, 151);
+  border: 3px solid rgb(146, 237, 134);
+  color: rgb(148, 245, 135);
   background-color: rgba(255, 255, 240, 0);
   cursor: pointer;
   border-top-right-radius: 16px;
@@ -78,26 +82,14 @@ input{
   border-bottom-right-radius: 16px;
   border-bottom-left-radius: 16px;
   width: 35px;
-  font-size: 3rem;
+  font-size: 2.5rem;
   height: 35px;
-  box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.487);
 }
   
 
-#addTask:hover{
-  border-color:rgb(43, 168, 196);
-  color: rgb(45, 174, 202);
-  box-shadow: 0 0 0.2rem rgb(0, 0, 0);
-
-}
-
-form>div{
-  display: flex;
-  justify-content: center;
-
-}
-
 ul{
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -107,36 +99,34 @@ ul{
   padding-bottom: 0px;
 }
 
-ul div{
+li{
   width: 100%;
+  height: 2.5rem;
   display: flex;
+  font-size: 1.4rem;
+  list-style-type: none;
   border: 1px rgba(0, 0, 0, 0.344) solid;
   justify-content: space-between;
   align-items: center;
-  border-bottom-left-radius: 15px;
-  border-top-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  border-top-right-radius: 15px;
-  margin-bottom: 7px;
+  border-bottom-left-radius: 18px;
+  border-top-left-radius: 18px;
+  border-bottom-right-radius: 18px;
+  border-top-right-radius: 18px;
+  margin-bottom: 10px;
   margin-right: 10px;
   margin-left: 10px;
-  background-color: rgba(232, 231, 231, 0.097);
+  background-color: rgba(210, 246, 247, 0.097);
   box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.638);
 }
 
-ul div:hover{
-  background-color: rgba(245, 245, 245, 0.597);
-
+li:hover{
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 0 0.4em rgb(0, 0, 0);
 }
 
-li{
+label{
   width: 100%;
-  height: 2rem;
-  list-style-type: none;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  color:black;
+  text-overflow: ellipsis;
   font-size: 1.4rem;
 }
 
@@ -148,37 +138,37 @@ li{
 .checkbox {
   width: 1.6rem;
   height: 1.6rem;
-  background-color: rgba(255, 255, 255, 0);
   border-radius: 50%;
   vertical-align: middle;
-  border: 2px solid rgb(0, 0, 0);
+  border: 3px solid rgb(0, 0, 0);
   appearance: none ;
   outline: none;
   cursor: pointer;
+  margin-left: 5px;
   margin-right: 5px;
   box-shadow: 0 0 1em rgba(0, 0, 0, 0);
+  background-color: rgb(154, 253, 141);
+  box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.57);
+  border: 3px solid rgb(25, 44, 55);
 }
 
 .checkbox:checked {
-  background-color: rgb(200, 247, 255);
-  box-shadow: 0 0 0.2rem rgb(0, 0, 0);
+  margin-left: 6.3px;
+  width: 1.4rem;
+  height: 1.4rem;
+  transition: 0.2s;
+  background-color: rgb(141, 192, 141);
+  box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.57);
   border: 3px solid rgb(25, 44, 55);
+  margin-right: 6.36px;
 }
-.checkbox:hover{
-  background-color: rgb(200, 247, 255);
-  border: 3px solid rgb(25, 44, 55);
-  box-shadow: 0 0 0.2rem rgb(0, 0, 0);
-}
-ul button{
+li button{
   margin-left: 5px;
   width: 1.7rem;
   height: 1.6rem;
   background-color: rgba(255, 255, 255, 0);
   border-radius: 50%;
-  vertical-align: middle;
-  border: 2px solid rgb(0, 0, 0);
   appearance: none;
-  -webkit-appearance: none;
   outline: none;
   cursor: pointer;
   display: flex;
@@ -187,11 +177,7 @@ ul button{
   font-weight: bolder;
   text-align: center;
   margin-right: 5px;
-  /* background-image: url(imgs/trash.png); */
-}
-ul button:hover{
-    color: rgb(255, 0, 0);
-    border: 3px solid rgb(25, 44, 55);
-    border-color: rgb(255, 0, 0);
-    box-shadow: 0 0 0.2rem rgb(0, 0, 0);
+  color: rgb(255, 0, 0);
+  border: 2.5px solid rgb(255, 0, 0);
+  box-shadow: 0 0 0.2rem rgb(0, 0, 0);
 }
