Foi retirado width do h1 e aumentando margin da div

--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ form{
 h1{
   line-height: 2rem;
   font-size: 4rem;
-  width: 69%;
   text-align: center;
   background-color: rgba(30, 210, 177, 0);
   color: black;  
@@ -48,6 +47,7 @@ div{
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 15px;
 
 }
 
