--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ div{
 
 }
 
-input{
+div input{
   border: 1px solid rgba(0, 0, 0, 0);
   background-color: rgba(210, 246, 247, 0.097);
   color: black;
@@ -61,7 +61,7 @@ input{
   border-bottom-left-radius: 18px;
   padding-left: 10px;
   height: 25px;
-  width: 74%;
+  width: 100%;
   height: 2.1rem;
   font-size: 1.4rem;
   margin-right: 5px;
