Adicionado fundo e alterado posicionamento do botão adicionar tarefa

--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ body{
   align-items: center;
   width: 100vw;
   background-color: rgb(255, 255, 255);
-
+  background-image: url(imgs/fundo.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 form{
   width: 90vw;
@@ -51,22 +53,33 @@ div{
 
 }
 
-div input{
+div{
   border: 1px solid rgba(0, 0, 0, 0);
-  background-color: rgba(210, 246, 247, 0.097);
+  background-color: rgba(252, 252, 252, 0.693);
   color: black;
   border-top-right-radius: 18px;
   border-top-left-radius: 18px;
   border-bottom-right-radius: 18px;
   border-bottom-left-radius: 18px;
+  height: 38px;
+  width: 90%;
+  box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.638);
+}
+
+div>input{
+  color: black;
   padding-left: 10px;
-  height: 25px;
-  width: 100%;
+  height: 30px;
+  width: 87%;
   height: 2.1rem;
   font-size: 1.4rem;
   margin-right: 5px;
-  box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.638);
+  background-color: rgba(255, 255, 255, 0);
+  border-color: rgba(255, 255, 255, 0);
+
 }
+
+
 
 /* button adicionar */
 #addTask{
@@ -75,18 +88,18 @@ div input{
   align-items: center;
   border: 3px solid rgb(146, 237, 134);
   color: rgb(148, 245, 135);
-  background-color: rgba(255, 255, 240, 0);
+  background-color: rgba(252, 252, 252, 0);
   cursor: pointer;
   border-top-right-radius: 16px;
   border-top-left-radius: 16px;
   border-bottom-right-radius: 16px;
   border-bottom-left-radius: 16px;
-  width: 35px;
+  width: 30px;
   font-size: 2.5rem;
-  height: 35px;
+  height: 30px;
   box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.487);
 }
-  
+ 
 
 ul{
   width: 100%;
@@ -113,14 +126,12 @@ li{
   border-bottom-right-radius: 18px;
   border-top-right-radius: 18px;
   margin-bottom: 10px;
-  margin-right: 10px;
-  margin-left: 10px;
-  background-color: rgba(210, 246, 247, 0.097);
+  background-color: rgba(252, 252, 252, 0.693);
   box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.638);
 }
 
 li:hover{
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.83);
     box-shadow: 0 0 0.4em rgb(0, 0, 0);
 }
 
