--- a/style.css
+++ b/style.css
@@ -8,12 +8,15 @@ body{
   justify-content: center;
   align-items: center;
   width: 100vw;
+  min-height: 100vh;
   background-color: rgb(255, 255, 255);
   background-image: url(imgs/fundo.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+    background-repeat: repeat;
+  background-size:cover;
 }
 form{
+  position: absolute;
+  top: 20px;
   width: 90vw;
   padding: 0px;
   display: flex;
@@ -70,7 +73,7 @@ div>input{
   color: black;
   padding-left: 10px;
   height: 30px;
-  width: 87%;
+  width: 100%;
   height: 2.1rem;
   font-size: 1.4rem;
   margin-right: 5px;
@@ -94,6 +97,7 @@ div>input{
   border-top-left-radius: 16px;
   border-bottom-right-radius: 16px;
   border-bottom-left-radius: 16px;
+  margin-right: 4px;
   width: 30px;
   font-size: 2.5rem;
   height: 30px;
@@ -136,9 +140,9 @@ li:hover{
 }
 
 label{
-  width: 100%;
-  text-overflow: ellipsis;
+  text-overflow: clip;
   font-size: 1.4rem;
+  margin-right: auto;
 }
 
 .checked{
@@ -147,8 +151,8 @@ label{
 }
 
 .checkbox {
-  width: 1.78rem;
-  height: 1.6rem;
+  width: 26px;
+  height: 26px;
   border-radius: 50%;
   vertical-align: middle;
   border: 3px solid rgb(0, 0, 0);
@@ -164,19 +168,19 @@ label{
 }
 
 .checkbox:checked {
-  margin-left: 6.8px;
-  width: 1.5rem;
-  height: 1.4rem;
+  margin-left: 6.5px;
+  width: 23px;
+  height: 23px;
   transition: 0.2s;
   background-color: rgb(141, 192, 141);
   box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.57);
   border: 3px solid rgb(25, 44, 55);
-  margin-right: 7px;
+  margin-right: 6.5px;
 }
 li button{
   margin-left: 5px;
-  width: 1.7rem;
-  height: 1.6rem;
+  width: 26px;
+  height: 26px;
   background-color: rgba(255, 255, 255, 0);
   border-radius: 50%;
   appearance: none;
