Altera fundo e limite de tarefas

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
   width: 100vw;
   min-height: 100vh;
   background-color: rgb(255, 255, 255);
-  background-image: url(imgs/fundo.jpg);
+  background-image: url(imgs/fundo2.jpg);
     background-repeat: repeat;
   background-size:cover;
 }
