--- a/style.css
+++ b/style.css
@@ -8,11 +8,13 @@ body{
   justify-content: center;
   align-items: center;
   width: 100vw;
-  min-height: 100vh;
-  background-color: rgb(255, 255, 255);
-  background-image: url(imgs/fundo2.jpg);
-    background-repeat: repeat;
-  background-size:cover;
+  height: 100vh;
+  background: #ef32d9;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #89fffd, #ef32d9);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #89fffd, #ef32d9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+/* background-image: url(imgs/fundoMar.jpg);
+  background-size: cover;
+  background-repeat: no-repeat; */
 }
 form{
   position: absolute;
