--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ body{
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background: #ef32d9;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #89fffd, #ef32d9);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #89fffd, #ef32d9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #ef32d9;  
+  background: -webkit-linear-gradient(to right, #89fffd, #ef32d9);
+  background: linear-gradient(to right, #89fffd, #ef32d9);
 }
 
 form{
@@ -89,8 +89,8 @@ div>input{
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 3px solid rgb(146, 237, 134);
-  color: rgb(148, 245, 135);
+  border: 3px solid rgb(112, 140, 250);
+  color: rgb(112, 140, 250);
   background-color: rgba(252, 252, 252, 0);
   cursor: pointer;
   border-top-right-radius: 16px;
@@ -101,7 +101,7 @@ div>input{
   width: 30px;
   font-size: 2.5rem;
   height: 30px;
-  box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.487);
+  box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.672);
 }
  
 
