--- a/style.css
+++ b/style.css
@@ -175,10 +175,11 @@ li:hover{
 }
 
 label{
-  text-overflow: ellipsis;
+  overflow:hidden;
+  white-space:nowrap;
+  width: 84%;
   font-size: 1.4rem;
   margin-right: auto;
-  height: fit-content;
 }
 
 .checked{
