--- a/style.css
+++ b/style.css
@@ -216,16 +216,16 @@ label{
 
 /* Delete Task */
 li button{
+  display: flex;
+  justify-content: center;
+  padding-top: 6px;
+  padding-bottom: 15px;
+  line-height: 0px;
   width: 26px;
   height: 26px;
   background-color: rgba(255, 255, 255, 0);
   border-radius: 50%;
   cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding-bottom: 7px;
   margin-right: 5px;
   margin-left: 5px;
   font-size: 2.9rem;
