--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ div>input{
   padding-left: 10px;
   height: 30px;
   width: 100%;
-  height: 2.1rem;
+  height: 38px;
   font-size: 1.4rem;
   margin-right: 5px;
   background-color: rgba(255, 255, 255, 0);
@@ -153,7 +153,7 @@ ul{
 
 li{
   width: 100%;
-  height: 2.5rem;
+  height: 38px;
   display: flex;
   font-size: 1.4rem;
   list-style-type: none;
@@ -218,8 +218,7 @@ label{
 li button{
   display: flex;
   justify-content: center;
-  padding-top: 6px;
-  padding-bottom: 15px;
+  padding-top: 7px;
   line-height: 0px;
   width: 26px;
   height: 26px;
@@ -228,7 +227,7 @@ li button{
   cursor: pointer;
   margin-right: 5px;
   margin-left: 5px;
-  font-size: 2.9rem;
+  font-size: 2em;
   color: rgb(255, 0, 0);
   border: 2.5px solid rgb(255, 0, 0);
   box-shadow: 0 0 0.2rem rgb(0, 0, 0);
