--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ div{
   align-items: center;
   margin-bottom: 30px;
   border: 1px solid rgba(0, 0, 0, 0);
-  background-color: rgba(252, 252, 252, 0.693);
+  background-color: rgb(252, 252, 252);
   color: black;
   border-top-right-radius: 18px;
   border-top-left-radius: 18px;
@@ -165,7 +165,7 @@ li{
 }
 
 li:hover{
-  background-color: rgba(255, 255, 255, 0.83);
+  background-color: rgb(255, 255, 255);
   box-shadow: 0 0 0.4em rgb(0, 0, 0);
 }
 
