--- a/style.css
+++ b/style.css
@@ -210,23 +210,22 @@ label{
 }
 
 /* Delete Task */
+
 li button{
-  /* transform: rotate(-90deg); */
+  transform: rotate(90deg);
   display: flex;
   justify-content: center;
   align-items: center;
+  color: rgb(255, 0, 0);
+  background-color: rgba(252, 252, 252, 0);
+  cursor: pointer;
+  border-radius: 50%;
   width: 26px;
   height: 26px;
-  background-color: rgba(255, 255, 255, 0);
-  border-radius: 50%;
-  cursor: pointer;
-  margin-right: 5px;
-  margin-left: 5px;
+  font-size: 1rem;
+  margin-right: 4px;
   line-height: 0px;
-  padding-bottom: 3.5px;
-  font-size: 35px;
-  font-family: verdana;
-  color: rgb(255, 0, 0);
+  font-weight: 900;
   border: 2.5px solid rgb(255, 0, 0);
   box-shadow: 0 0 0.2rem rgb(0, 0, 0);
 }
