trocado gradiente para cinza e clareado mais o mesmo

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
   width: 98vw;
   height: 100vh;
   background: #ffffff;  
-  background: linear-gradient(to left, #e9ebffbf, rgb(255, 255, 255),  #e9ebffbf);
+  background: linear-gradient(to left, #e6e6e6bf, #f5f5f5bf,  #e6e6e6bf);
 }
 
 form{
