--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ body{
   width: 98vw;
   height: 100vh;
   background: #ffffff;  
-  background: linear-gradient(to left, #e6e6e6bf, #f5f5f5bf,  #e6e6e6bf);
+  background: linear-gradient(to left, #e6e6e6bf, #fdfdfdbf,  #e6e6e6bf);
 }
 
-form{
+#conteinerGeral{
   position: absolute;
   top: 10px;
   width: 90vw;
@@ -53,7 +53,7 @@ h1>img{
 
 }
 
-div{
+#conteinerInputText{
   max-width: 600px;
   min-width: 310px;
   display: flex;
@@ -79,7 +79,8 @@ div{
   }
 }
 
-div>input{
+/* Campo de digitação da tarefa */
+#textArea{
   color: black;
   padding-left: 10px;
   height: 30px;
@@ -135,7 +136,7 @@ div>input{
 }
  
 
-ul{
+#conteinerList{
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -146,7 +147,7 @@ ul{
   padding-bottom: 0px;
 }
 
-li{
+.taskList{
   width: 100%;
   height: 38px;
   display: flex;
@@ -164,12 +165,12 @@ li{
   box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.638);
 }
 
-li:hover{
+.taskList:hover{
   background-color: rgb(255, 255, 255);
   box-shadow: 0 0 0.4em rgb(0, 0, 0);
 }
 
-label{
+.textTask{
   overflow:hidden;
   white-space:nowrap;
   width: 84%;
@@ -211,7 +212,7 @@ label{
 
 /* Delete Task */
 
-li button{
+.deleteTask{
   transform: rotate(90deg);
   display: flex;
   justify-content: center;
